# rusty-rails-backend

./: .gitignore  Cargo.toml  Dockerfile  caddyfile
.cargo/: config.toml
config/: project.toml
ns_api/: Cargo.toml
ns_api/src/: lib.rs
scripts/gis/: gis.md
src/: access.rs  api.rs  cache.rs  cli.rs  contextual_serializer.rs  dayoffset.rs  fetch.rs  iff.rs  main.rs  ndovloket_api.rs  ns_api.rs  print.rs  time.rs
src/api/: active_rides.rs  active_rides_timespan.rs  all_rides.rs  company_map.rs  datarepo.rs  errorresponse.rs  find_path_endpoint.rs  location_map.rs
src/api/datarepo/: links.rs  stations.rs
src/api/datarepo/testdata/: station.json
src/cache/: ns_api.rs
src/iff/: dayoffset.rs  parsing.rs
src/iff/parsing/: company.rs  timetable.rs
src/iff/testdata/: record1  record2  record3  record4
