[package]
name = "rustyrails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version ="0.11.23", features = ["blocking"]}
winnow = { version = "0.5.31"}
zip = "0.6.6"
