workspace = { members = ["ns_api"] }
[package]
name = "rustyrails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["clock"] }
chrono-tz = { version = "0.8.5", features = ["filter-by-regex"] }
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = "3.4.4"
figment = { version = "0.10.15", features = ["toml", "env"] }
poem = { version = "2.0.0", features = ["static-files"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.57"
tokio = "1.35.1"
winnow = { version = "0.5.31"}
zip = "0.6.6"
ns_api = {path = "ns_api"}
[dev-dependencies]
pretty_assertions = "1.4.0"
testresult = "0.4.0"
